# scrapyscript

./: .gitignore  .travis.yml  CHANGELOG.md  LICENCE  Makefile  README  README.md  pyproject.toml  requirements.txt  scrapyscript.py  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: ci.yml  release.yml  tests.yml
examples/: minimal.py  tasks.py
src/scrapyscript/: __init__.py  scrapy.cfg
tests/: items.py  spiders.py  test_celery.py  test_job.py  test_processor.py  test_scrapyscript.py
