[tool.poetry]
name = "scrapyscript"
version = "1.1.0"
description = "Run a Scrapy spider programmatically from a script or a Celery task - no project required."
authors = ["Jeff Schnurr <jschnurr@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jschnurr/scrapyscript"
keywords = ["scrapy"]
classifiers = [
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Framework :: Scrapy',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License'
]
include = [
        'LICENCE'
]

[tool.poetry.dependencies]
python = "^3.8"
billiard = "^3.6"
scrapy = "^2.5"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2"
tox = "^3.24"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py38,py39,py10

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run black --check --diff --quiet src
    poetry run pytest tests/
"""