[tool.poetry]
name = "scrapyscript"
version = "0.0.0"  # set based on git tag by CI
description = "Run a Scrapy spider programmatically from a script or a Celery task - no project required."
authors = ["Jeff Schnurr <jschnurr@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jschnurr/scrapyscript"
keywords = ["scrapy"]
classifiers = [
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Framework :: Scrapy',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License'
]
include = [
        'LICENCE',
        'CHANGELOG.md'
]

[tool.poetry.urls]
"Bug tracker" = "https://github.com/jschnurr/scrapyscript/issues"
"Changelog" = "https://github.com/jschnurr/scrapyscript/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.8"
billiard = "^3.6"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2"
pylint = "^2.9"
tox = "^3.24"
celery = "^5.1"
pytest-timeout = "^2.0.1"
coverage = {extras = ["toml"], version = "^6.2"}
[tool.coverage.run]
omit = [".*", "*/site-packages/*", "tests/*"]

[tool.coverage.report]
fail_under = 80

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
